# CalarmHelp

./: .coverage  .env_sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.MD  README.Docker.md  README.md  calarmHelp.code-workspace  calendarAlarmService.yml  compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  tasks.py
.github/: copilot-instructions.md
calarmhelp/: main.py
calarmhelp/scripts/: deploy_app.py  docker_build.py  docker_push.py  docker_start.py  precommit.py  run_tests.py  start.py
calarmhelp/services/: calendarAlarmService.py  googleCalendarService.py
calarmhelp/services/util/: constants.py  getCredentials.py  llmSetup.py  obsolete.py  util.py
calarmhelp/templates/: googleCalendarFeeder.jinja  googleCalendarFeeder.py  haystackGuidedFeeder.jinja
calarmhelp/tests/: conftest.py  test_api.py  test_calendar_alarm_service.py  test_calendar_alarm_service_additional.py  test_google_calendar_service.py  test_utils.py
cloudFunctions/event/: main.py
cloudFunctions/event/services/: calendarAlarmService.py  googleCalendarService.py
saveDocker/: Dockerfile
services/: calendarAlarmService.py  googleCalendarService.py
