[tool.poetry]
name = "calarmhelp"
version = "0.1.0"
description = ""
authors = ["Dashinja <byron@dashinja.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.1.3"
python-dotenv = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"
langchain = "^0.1.16"
langchain-core = "^0.1.45"
langchain-community = "^0.0.34"
jsonschema = "^4.21.1"
google-auth = "^2.29.0"
google-api-python-client = "^2.126.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
functions-framework = "^3.5.0"
httpx = "^0.27.0"
asyncio = "^3.4.3"
google-cloud-storage = "^2.17.0"
pynvim = "^0.5.0"
haystack-ai = "^2.4.0"
jinja2 = "^3.1.4"
colorama = "^0.4.6"
black = "^24.8.0"

[tool.poetry.scripts]
start = "calarmhelp.scripts.start:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
