[tool.poetry]
package-mode=false
name = "calarmhelp"
version = "1.1.0"
description = ""
authors = ["Dashinja"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"
google-auth = "^2.34.0"
google-api-python-client = "^2.143.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
functions-framework = "^3.5.0"
pynvim = "^0.5.0"
haystack-ai = "^2.4.0"
jinja2 = "^3.1.6"
colorama = "^0.4.6"
black = "^24.8.0"
langfuse-haystack = "^0.2.0"
langfuse = "^2.45.1"

[tool.poetry.scripts]
start = "calarmhelp.scripts.start:run"
precommit = "calarmhelp.scripts.precommit:run"
docker-start = "calarmhelp.scripts.docker_start:run"
docker-build = "calarmhelp.scripts.docker_build:run"
deploy-app = "calarmhelp.scripts.deploy_app:run"

[tool.poetry.group.dev.dependencies]
pyproject-pre-commit = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
